--- a/index.html
+++ b/index.html
@@ -81,10 +81,7 @@
                                 <a href="https://www.facebook.com/tubajki" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                             </li>
                             <li>
-                                <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                                <a href="mailto:darek.kleczek@gmail.com" class="btn btn-default btn-lg"><i class="fa-envelope-o"></i> <span class="network-name">Email</span></a>
                             </li>
                         </ul>
                     </div>
