edycja index.html i obrazkow

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#about">O nas</a>
+                        <a href="#about">Tuko Tuko</a>
                     </li>
                     <li>
-                        <a href="#services">Książki</a>
+                        <a href="#services">Książka</a>
                     </li>
                     <li>
                         <a href="#contact">Kontakt</a>
@@ -73,8 +73,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Tuko Tuko</h1>
-                        <h3>Gdzie się podziały słodycze?</h3>
+                        <h1>Witamy w Tuko Tuko!</h1>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
@@ -106,6 +105,12 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Premiera<br>Gdzie się podziały słodycze?</h2>
                     <p class="lead">Przyjaciele z krainy Tuko Tuko uwielbiają się bawić. Najczęściej przewodzi im Dyzio, zawsze pełen energii i szalonych pomysłów. Zawsze towarzyszy mu wierny Majtek, a zwykle dołączają do nich rezolutna Nusia i przemądrzały Krostek. Tylko Ryfek nie zawsze może im towarzyszyć, ponieważ mieszka daleko i często choruje. Ich beztroskie życie burzy nagłe zniknięcie słodyczy. W całej krainie znikają wszystkie cukierki, czekoladki, żelki, ciastka i babeczki. Nie zostało nic słodkiego.</p>
+                    <p class="lead">“Gdzie się podziały słodycze” to powieść skierowana do dzieci w wieku 5-6 lat i ich rodziców. Naszą misją jest pokazanie poprzez znane dzieciom postaci z krainy Tuko Tuko czym jest przyjaźń, odwaga, czy wiara we własne możliwości. Chcemy wręczyć w najmniejsze ręce niezwykłą historię – pięknie wydaną i niosącą niezwykle ważne treści.</p>
+                    <ul class="list-inline intro-social-buttons">
+                        <li>
+                            <a href="http://www.motyleksiazkowe.pl/26498-gdzie-si-podziay-sodycze-tuko-tuko-9788394371401.html" class="btn btn-default btn-lg"><i class="fa fa-shopping-cart fa-fw"></i> <span class="network-name">Kup teraz</span></a>
+                        </li>
+                    </ul>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/ipad.png" alt="">
@@ -126,8 +131,9 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                    <h2 class="section-heading">Media</h2>
+                    <p class="lead">Tak między innymi napisała o nas <a href="http://dzielnicarodzica.pl/42593/31/artykuly/przedszkolak/wychowanie/Gdzie_sie_podzialy_slodycze_?cid=24731383">Dzielnica Rodzica:</a></p>
+                    <p class="lead">Losy małych bohaterów opisane w powieści "Gdzie się podziały słodycze?" bawią, uczą i pokazują, jak wielką moc ma przyjaźń. To ciekawa propozycja dla kilkuletnich dzieci, które z wypiekami na twarzy śledzić będą przygody mieszkańców Tuko Tuko.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/dog.png" alt="">
@@ -148,8 +154,8 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
+                    <h2 class="section-heading">Gry i aplikacje</h2>
+                    <p class="lead">Już wkrótce zapraszamy do zabawy z naszymi grami i aplikacjami na tablet i telefon!</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/phones.png" alt="">
