index.html zmiana

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a href="#about">Tuko Tuko</a>
                     </li>
                     <li>
-                        <a href="#services">Książka</a>
+                        <a href="#services">Wydawnictwo</a>
                     </li>
                     <li>
                         <a href="#contact">Kontakt</a>
