--- a/index.html
+++ b/index.html
@@ -202,15 +202,11 @@
                 <div class="col-lg-12">
                     <ul class="list-inline">
                         <li>
-                            <a href="#">Home</a>
+                            <a href="#about">Tuko Tuko</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#about">O nas</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#services">Książki</a>
+                            <a href="#services">Wydawnictwo</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
